# lammps-util

./: .gitignore  Pipfile  pyproject.toml
.github/workflows/: pylint.yml
lammps_util/: __init__.py  analyze.py  classes.py  filesystem.py  hello.py  lammps.py  run.py
src/lammps_util/: analyze.py  classes.py  filesystem.py  lammps.py  run.py
src/tests/: classes.py  dump.during  dump.surface  sputter.py  surface.py
tests/: classes.py  log.lammps  sputter.py  test_lammps_util.py
