[project]
name = "lammps-util"
version = "0.0.1"
authors = [
  { name="Denis Strizhkin", email="strdenis02@gmail.com" },
]
description = "Python functions for working with LAMMPS"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy >= 2.1.2",
  "matplotlib >= 3.9.2",
]

[project.urls]
Homepage = "https://github.com/denisstrizhkin/lammps-util"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
