[project]
name = "lammps-util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Denis Strizhkin", email = "strdenis02@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["numpy", "matplotlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
